--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -4,7 +4,18 @@
 
 // Variables
 @import "variables";
+
+// Module
 @import "modules/image";
+@import "modules/size";
+@import "modules/position";
+
+// Specific
+@import "specific/subMenu";
+@import "specific/fbapp";
+@import "specific/homeCarousel";
+@import "specific/gallery";
+@import "specific/navbar";
 
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
