add icons and some css module

--- a/resources/assets/sass/modules/_position.scss
+++ b/resources/assets/sass/modules/_position.scss
@@ -3,3 +3,15 @@
   align-items: center;
   justify-content: center;
 }
+
+.relative{
+  position:relative;
+}
+
+.absolute{
+  position:absolute;
+}
+
+.fixed{
+  position:fixed;
+}
