--- a/resources/assets/sass/specific/_subMenu.scss
+++ b/resources/assets/sass/specific/_subMenu.scss
@@ -9,6 +9,15 @@
     span{
       line-height: 30px;
     }
+    .sub-menu-search{
+        position:absolute;
+        left:0;
+        bottom:10px;
+        opacity:.6;
+    }
+    .sub-menu-autocomplete{
+      padding-left:35px;
+    }
   }
 
   .right-div{
