add navbar, chrome bug on cover

--- a/resources/assets/sass/specific/_subMenu.scss
+++ b/resources/assets/sass/specific/_subMenu.scss
@@ -20,6 +20,13 @@
         }
     }
 
+    .sub-menu-img-cover{
+        display: block;
+        max-width: 100%;
+        margin: 0 auto;
+        object-fit: cover;
+    }
+
     .right-div{
         h4{
             font-weight: 800;
