--- a/resources/assets/sass/specific/_navbar.scss
+++ b/resources/assets/sass/specific/_navbar.scss
@@ -8,6 +8,9 @@
     }
 
     .navbar-mui{
-        display:none !important;
+        position:fixed;
+        top:0;
+        width:100%;
+        z-index:1;
     }
 }
