--- a/resources/assets/sass/specific/_navbar.scss
+++ b/resources/assets/sass/specific/_navbar.scss
@@ -5,12 +5,13 @@
         top:0;
         right:0;
         z-index:10;
+        display:none;
     }
 
     .navbar-mui{
-        position:fixed;
-        top:0;
-        width:100%;
-        z-index:1;
+        position:fixed !important;
+        top:0 !important;
+        width:100% !important;
+        z-index:1 !important;
     }
 }
