onClick test need refacto redux

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -9,6 +9,7 @@
 @import "modules/image";
 @import "modules/size";
 @import "modules/position";
+@import "modules/text";
 
 // Specific
 @import "specific/subMenu";
