Starting responsive grid

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -10,6 +10,7 @@
 @import "modules/size";
 @import "modules/position";
 @import "modules/text";
+@import "modules/grid";
 
 // Specific
 @import "specific/subMenu";
