--- a/resources/assets/sass/specific/_gallery.scss
+++ b/resources/assets/sass/specific/_gallery.scss
@@ -1,3 +1,8 @@
 .gallery-wrapper{
-    background: #363636;
+    background: #363636 !important;
+    display: block;
+    min-height: 1px;
+    width: 100%;
+    border: 1px solid rgb(221, 221, 221);
+    overflow: auto;
 }
