--- a/resources/assets/sass/specific/_subMenu.scss
+++ b/resources/assets/sass/specific/_subMenu.scss
@@ -1,7 +1,6 @@
 .sub-menu{
     padding: 25px 15px;
     .left-div{
-        margin-bottom: 15px;
         h1{
             text-transform: uppercase;
             padding:0;
@@ -12,7 +11,7 @@
         .sub-menu-search{
             position:absolute;
             left:0;
-            bottom:10px;
+            bottom:13px;
             opacity:.6;
         }
         .sub-menu-autocomplete{
@@ -26,6 +25,7 @@
         max-width: 100%;
         margin: 0 auto;
         object-fit: cover;
+        min-height: 170px;
     }
 
     .right-div{
