--- a/resources/assets/sass/modules/_grid.scss
+++ b/resources/assets/sass/modules/_grid.scss
@@ -1,20 +1,22 @@
 .gridLayout{
     .gridRow {
-     -moz-column-width: 18em;
-     -webkit-column-width: 18em;
-     -moz-column-gap: 1em;
-     -webkit-column-gap:1em;
-
+        -moz-column-width: 18em;
+        -webkit-column-width: 18em;
+        margin: 0 10px;
     }
 
     .gridItem {
-     display: inline-block;
-     padding:  .25rem;
-     width:  100%;
+        margin-top:8px;
+        display: inline-block;
+        width:  100%;
     }
 
     .gridWell {
-     position:relative;
-     display: block;
+        position:relative;
+        display: block;
+
+        img{
+            border-radius: 5px;
+        }
     }
 }
