--- a/resources/assets/sass/modules/_image.scss
+++ b/resources/assets/sass/modules/_image.scss
@@ -9,3 +9,10 @@
     margin: 0 auto;
     object-fit: cover;
 }
+
+.img-cover-no-height{
+    display: block;
+    max-width: 100%;
+    margin: 0 auto;
+    object-fit: cover;
+}
