--- a/resources/assets/sass/modules/_size.scss
+++ b/resources/assets/sass/modules/_size.scss
@@ -1,7 +1,400 @@
 .full-width{
     width: 100%;
 }
+.width-24{
+    width: 100%;
+}
+.width-23{
+    width: 95.832%;
+}
+.width-22{
+    width: 91.666%;
+}
+.width-21{
+    width: 87.5%;
+}
+.width-20{
+    width: 83.333%;
+}
+.width-19{
+    width: 79.167%;
+}
+.width-18{
+    width: 75%;
+}
+.width-17{
+    width: 70.834%;
+}
+.width-16{
+    width: 66.666%;
+}
+.width-15{
+    width: 62.5%;
+}
+.width-14{
+    width: 58.333%;
+}
+.width-13{
+    width: 54.166%;
+}
+.half-width{
+    width: 50%;
+}
+.width-12{
+    width: 50%;
+}
+.width-11{
+    width: 45.834%;
+}
+.width-10{
+    width: 41.666%;
+}
+.width-9{
+    width: 37.5%;
+}
+.width-8{
+    width: 33.333%;
+}
+.width-7{
+    width: 29.167%;
+}
+.width-6{
+    width: 25%;
+}
+.width-5{
+    width: 20.834%;
+}
+.width-4{
+    width: 16.666%;
+}
+.width-3{
+    width: 12.5%;
+}
+.width-2{
+    width: 8.333%;
+}
+.width-1{
+    width: 4.166%;
+}
+.width-0{
+    width: 0;
+}
+.width-auto{
+    width: auto;
+}
+@media screen and (min-width: 480px){
+    .width-24-xs{
+        width: 100%;
+    }
+    .width-23-xs{
+        width: 95.832%;
+    }
+    .width-22-xs{
+        width: 91.666%;
+    }
+    .width-21-xs{
+        width: 87.5%;
+    }
+    .width-20-xs{
+        width: 83.333%;
+    }
+    .width-19-xs{
+        width: 79.167%;
+    }
+    .width-18-xs{
+        width: 75%;
+    }
+    .width-17-xs{
+        width: 70.834%;
+    }
+    .width-16-xs{
+        width: 66.666%;
+    }
+    .width-15-xs{
+        width: 62.5%;
+    }
+    .width-14-xs{
+        width: 58.333%;
+    }
+    .width-13-xs{
+        width: 54.166%;
+    }
+    .width-12-xs{
+        width: 50%;
+    }
+    .width-11-xs{
+        width: 45.834%;
+    }
+    .width-10-xs{
+        width: 41.666%;
+    }
+    .width-9-xs{
+        width: 37.5%;
+    }
+    .width-8-xs{
+        width: 33.333%;
+    }
+    .width-7-xs{
+        width: 29.167%;
+    }
+    .width-6-xs{
+        width: 25%;
+    }
+    .width-5-xs{
+        width: 20.834%;
+    }
+    .width-4-xs{
+        width: 16.666%;
+    }
+    .width-3-xs{
+        width: 12.5%;
+    }
+    .width-2-xs{
+        width: 8.333%;
+    }
+    .width-1-xs{
+        width: 4.166%;
+    }
+}
 
+@media screen and (min-width: 767px){
+    .width-24-sm{
+        width: 100%;
+    }
+    .width-23-sm{
+        width: 95.832%;
+    }
+    .width-22-sm{
+        width: 91.666%;
+    }
+    .width-21-sm{
+        width: 87.5%;
+    }
+    .width-20-sm{
+        width: 83.333%;
+    }
+    .width-19-sm{
+        width: 79.167%;
+    }
+    .width-18-sm{
+        width: 75%;
+    }
+    .width-17-sm{
+        width: 70.834%;
+    }
+    .width-16-sm{
+        width: 66.666%;
+    }
+    .width-15-sm{
+        width: 62.5%;
+    }
+    .width-14-sm{
+        width: 58.333%;
+    }
+    .width-13-sm{
+        width: 54.166%;
+    }
+    .width-12-sm{
+        width: 50%;
+    }
+    .width-11-sm{
+        width: 45.834%;
+    }
+    .width-10-sm{
+        width: 41.666%;
+    }
+    .width-9-sm{
+        width: 37.5%;
+    }
+    .width-8-sm{
+        width: 33.333%;
+    }
+    .width-7-sm{
+        width: 29.167%;
+    }
+    .width-6-sm{
+        width: 25%;
+    }
+    .width-5-sm{
+        width: 20.834%;
+    }
+    .width-4-sm{
+        width: 16.666%;
+    }
+    .width-3-sm{
+        width: 12.5%;
+    }
+    .width-2-sm{
+        width: 8.333%;
+    }
+    .width-1-sm{
+        width: 4.166%;
+    }
+}
+
+@media screen and (min-width: 992px){
+    .width-24-md{
+        width: 100%;
+    }
+    .width-23-md{
+        width: 95.832%;
+    }
+    .width-22-md{
+        width: 91.666%;
+    }
+    .width-21-md{
+        width: 87.5%;
+    }
+    .width-20-md{
+        width: 83.333%;
+    }
+    .width-19-md{
+        width: 79.167%;
+    }
+    .width-18-md{
+        width: 75%;
+    }
+    .width-17-md{
+        width: 70.834%;
+    }
+    .width-16-md{
+        width: 66.666%;
+    }
+    .width-15-md{
+        width: 62.5%;
+    }
+    .width-14-md{
+        width: 58.333%;
+    }
+    .width-13-md{
+        width: 54.166%;
+    }
+    .width-12-md{
+        width: 50%;
+    }
+    .width-11-md{
+        width: 45.834%;
+    }
+    .width-10-md{
+        width: 41.666%;
+    }
+    .width-9-md{
+        width: 37.5%;
+    }
+    .width-8-md{
+        width: 33.333%;
+    }
+    .width-7-md{
+        width: 29.167%;
+    }
+    .width-6-md{
+        width: 25%;
+    }
+    .width-5-md{
+        width: 20.834%;
+    }
+    .width-4-md{
+        width: 16.666%;
+    }
+    .width-3-md{
+        width: 12.5%;
+    }
+    .width-2-md{
+        width: 8.333%;
+    }
+    .width-1-md{
+        width: 4.166%;
+    }
+}
+
+@media screen and (min-width: 1200px){
+    .width-24-lg{
+        width: 100%;
+    }
+    .width-23-lg{
+        width: 95.832%;
+    }
+    .width-22-lg{
+        width: 91.666%;
+    }
+    .width-21-lg{
+        width: 87.5%;
+    }
+    .width-20-lg{
+        width: 83.333%;
+    }
+    .width-19-lg{
+        width: 79.167%;
+    }
+    .width-18-lg{
+        width: 75%;
+    }
+    .width-17-lg{
+        width: 70.834%;
+    }
+    .width-16-lg{
+        width: 66.666%;
+    }
+    .width-15-lg{
+        width: 62.5%;
+    }
+    .width-14-lg{
+        width: 58.333%;
+    }
+    .width-13-lg{
+        width: 54.166%;
+    }
+    .width-12-lg{
+        width: 50%;
+    }
+    .width-11-lg{
+        width: 45.834%;
+    }
+    .width-10-lg{
+        width: 41.666%;
+    }
+    .width-9-lg{
+        width: 37.5%;
+    }
+    .width-8-lg{
+        width: 33.333%;
+    }
+    .width-7-lg{
+        width: 29.167%;
+    }
+    .width-6-lg{
+        width: 25%;
+    }
+    .width-5-lg{
+        width: 20.834%;
+    }
+    .width-4-lg{
+        width: 16.666%;
+    }
+    .width-3-lg{
+        width: 12.5%;
+    }
+    .width-2-lg{
+        width: 8.333%;
+    }
+    .width-1-lg{
+        width: 4.166%;
+    }
+}
+
+
+.max-page-size{
+    max-width: 100%;
+}
 .full-height{
-    height:100%;
+    height: 100%;
+}
+.full-height-i{
+     height: 100% !important;
+ }
+.height-auto{
+    height: auto;
+}
+.height-0{
+    height: 0;
 }
