Admin handler Step 1: add modal and some css

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -17,6 +17,7 @@
 @import "specific/fbapp";
 @import "specific/homeCarousel";
 @import "specific/navbar";
+@import "specific/admin";
 
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
