Have to change the material ui table, will still occur

--- a/resources/assets/sass/specific/_admin.scss
+++ b/resources/assets/sass/specific/_admin.scss
@@ -16,3 +16,25 @@
     padding: 0 !important;
     height: 100%;
 }
+
+.admin-td {
+}
+
+.admin-td-id {
+}
+
+.admin-td-title {
+}
+
+.admin-td-start {
+}
+
+.admin-td-end {
+}
+
+.admin-td-state {
+}
+
+.admin-td-eventsBtn {
+    overflow: visible !important;
+}
