--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -11,6 +11,7 @@
 @import "modules/position";
 @import "modules/text";
 @import "modules/grid";
+@import "modules/display";
 
 // Specific
 @import "specific/subMenu";
