Add profil div on admin, need to replace the material ui table with some flex component

--- a/resources/assets/sass/specific/_admin.scss
+++ b/resources/assets/sass/specific/_admin.scss
@@ -17,6 +17,17 @@
     height: 100%;
 }
 
+.admin-profil{
+    height: 160px;
+    width: 100%;
+}
+
+.admin-profil-name{
+    display: block;
+    text-align: center;
+    padding: 15px;
+}
+
 .admin-td {
 }
 
