Added mockup with hover

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -21,6 +21,7 @@
 @import "specific/homeCarousel";
 @import "specific/navbar";
 @import "specific/admin";
+@import "specific/svg";
 
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
