--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -22,6 +22,7 @@
 @import "specific/navbar";
 @import "specific/admin";
 @import "specific/svg";
+@import "specific/fullScreen";
 
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
