--- a/resources/assets/sass/specific/_admin.scss
+++ b/resources/assets/sass/specific/_admin.scss
@@ -28,28 +28,43 @@
     padding: 15px;
 }
 
-.admin-td {
-}
-
-.admin-td-id {
-}
-
-.admin-td-title {
-}
-
-.admin-td-start {
-}
-
-.admin-td-end {
-}
-
-.admin-td-state {
-}
-
-.admin-td-eventsBtn {
-    overflow: visible !important;
-}
-
 .block-picker {
     margin-top: 15px;
+}
+
+.td-actions {
+    width: 337px;
+}
+
+.sidebar-wrapper {
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+}
+
+@media (max-width: 767px) {
+    .td-actions {
+        width: 156px !important;
+    }
+
+    .sidebar-wrapper {
+        display: inline-block !important;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+    .td-actions {
+        width: initial !important;
+    }
+
+    .sidebar-wrapper {
+        display: inline-block !important;
+    }
+}
+
+.admin-sidebar-mobile {
+    width: 100%;
+    display: inline-block;
+    text-align: center;
+    margin-bottom: 20px;
 }
