publish_preview rightfully displaying, next step shall be sending info to server

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -23,6 +23,7 @@
 @import "specific/admin";
 @import "specific/svg";
 @import "specific/fullScreen";
+@import "specific/publishPreview";
 
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
