--- a/resources/assets/sass/specific/_publishPreview.scss
+++ b/resources/assets/sass/specific/_publishPreview.scss
@@ -1,4 +1,5 @@
 .publish_preview_container{
+    font-family: Helvetica, Arial, sans-serif;
     margin-top: 20px;
     -webkit-box-shadow: 5px 2px 10px -1px rgba(0,0,0,0.75);
     -moz-box-shadow: 5px 2px 10px -1px rgba(0,0,0,0.75);
