--- a/resources/assets/sass/specific/_navbar.scss
+++ b/resources/assets/sass/specific/_navbar.scss
@@ -6,10 +6,10 @@
     width:100%;
 
     .navbar-mui-right{
-        margin: -8px 0 0 0 !important;
-        padding-right: 65px !important;
-        line-height: 64px !important;
-        color:white !important;
+        padding-right: 45px !important;
+        line-height: 42px !important;
+        color: white !important;
+        margin-top: -8.5px !important;
 
         span{
             color:white !important;
@@ -27,7 +27,12 @@
         position:fixed !important;
         top:0 !important;
         width:100% !important;
-        height:64px;
+        height:42px;
+
+        h1{
+            height: 42px !important;
+            line-height: 42px !important;
+        }
     }
 
     .navbar-mui.navbar-mui-out{
