--- a/resources/assets/sass/specific/_admin.scss
+++ b/resources/assets/sass/specific/_admin.scss
@@ -11,6 +11,10 @@
     }
 }
 
+.fb-share-button span:first-child{
+    margin-bottom: 10px;
+}
+
 .admin-sidebar {
     border-right: 1px solid #ddd;
     padding: 0 !important;
