--- a/resources/assets/sass/specific/_navbar.scss
+++ b/resources/assets/sass/specific/_navbar.scss
@@ -10,6 +10,9 @@
         line-height: 42px !important;
         color: white !important;
         margin-top: -8.5px !important;
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
         span{
             color:white !important;
