--- a/resources/assets/sass/specific/_admin.scss
+++ b/resources/assets/sass/specific/_admin.scss
@@ -17,6 +17,11 @@
     height: 100%;
 }
 
+.fb-share-button span:first-child{
+    margin-bottom: 10px;
+}
+
+
 .admin-profil{
     height: 160px;
     width: 100%;
